--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,8 @@
 = Access Control Service
 
-https://travis-ci.org/restorecommerce/access-control-srv?branch=master[image:http://img.shields.io/travis/restorecommerce/access-control-srv/master.svg?style=flat-square[Build Status]]
-https://depfu.com/repos/github/restorecommerce/access-control-srv[image:https://img.shields.io/depfu/dependencies/github/restorecommerce/access-control-srv?style=flat-square]]
-https://coveralls.io/github/restorecommerce/access-control-srv?branch=master[image:http://img.shields.io/coveralls/restorecommerce/access-control-srv/master.svg?style=flat-square[Coverage Status]]
+https://travis-ci.org/restorecommerce/access-control-srv?branch=master[image:https://img.shields.io/travis/restorecommerce/access-control-srv/master.svg?style=flat-square[Build Status]]
+https://depfu.com/repos/github/restorecommerce/access-control-srv?branch=master[image:https://img.shields.io/depfu/dependencies/github/restorecommerce/access-control-srv?style=flat-square]
+https://coveralls.io/github/restorecommerce/access-control-srv?branch=master[image:http://img.shields.io/coveralls/github/restorecommerce/access-control-srv/master.svg?style=flat-square[Coverage Status]]
 
 A microservice for access control.
 
